--- a/style.css
+++ b/style.css
@@ -15,6 +15,14 @@
 	max-width:1200px;
 }
 
+.custom-select {
+	display: none;
+}
+
+.dropdown-toggle::after {
+	display: none;
+}
+
 /* .sidebar {
 	position: sticky;
 	top: 0;
