--- a/livechat/chatapp/templates/chatapp/index.html
+++ b/livechat/chatapp/templates/chatapp/index.html
@@ -3,5 +3,9 @@
 <h1>List of users</h1>
 {% for user in users %}
 <a href="{% url 'chatroom' user.username %}"> {{ user.username }} </a> </br>
+<form method="post" action="{% url 'block_user' user.username %}">
+  {% csrf_token %}
+  <button type="submit">Block {{ user.username }}</button>
+</form>
 {% endfor %}
 {% endblock %}
