--- a/style.css
+++ b/style.css
@@ -23,6 +23,18 @@
 	display: none;
 }
 
+.bracket-column {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+.bracket-line {
+	height: 50px;
+	width: 2px;
+	background-color: white;
+	margin: auto;
+}
+
 /* .sidebar {
 	position: sticky;
 	top: 0;
