--- a/frontend/style.css
+++ b/frontend/style.css
@@ -52,3 +52,12 @@
 .red-highlight {
 	background-color: #ff0000;
 }
+
+#sidebar-cover {
+	content: '';
+	width: 100%;
+	height: 100%;
+	z-index: 2;
+	left: 0;
+	top: 0;
+}
