--- a/users/srcs/user/templates/accounts/emails/account_verification_email.html
+++ b/users/srcs/user/templates/accounts/emails/account_verification_email.html
@@ -1,4 +1,4 @@
 Hi {{ user.username }},
 
 Please click on the link below to verify your account:
-http://{{ domain }}{% url 'activate' uidb64=uid token=token %}
+https://{{ domain }}{% url 'activate' uidb64=uid token=token %}
